Added default messages for errors in ForgotPasswordForm and UpdateUserForm

--- a/tex/files/compile.tex
+++ b/tex/files/compile.tex
@@ -1,9 +1,9 @@
 \documentclass{article}
 \title{New Exam}
-\author{Diego notCanez}
+\author{Diego Canez}
 \begin{document}
 \maketitle
-\begin{center}
-Design and Analysis of Algorithms - CS2101
-\end{center}
+\begin{enumerate}
+\item What functions does the TLB have?
+\end{enumerate}
 \end{document}
